RESOLVED FIXED214938
Highlight color does not switch after being set it system preferences.
https://bugs.webkit.org/show_bug.cgi?id=214938
Summary Highlight color does not switch after being set it system preferences.
Megan Gardner
Reported 2020-07-29 14:49:27 PDT
Highlight color does not switch after being set it system preferences.
Attachments
Patch (3.44 KB, patch)
2020-07-29 14:52 PDT, Megan Gardner
thorton: review+
Patch (3.50 KB, patch)
2020-07-29 15:04 PDT, Megan Gardner
thorton: review+
Patch (3.49 KB, patch)
2020-07-29 15:30 PDT, Megan Gardner
no flags
Megan Gardner
Comment 1 2020-07-29 14:52:54 PDT
Tim Horton
Comment 2 2020-07-29 14:57:23 PDT
Comment on attachment 405507 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405507&action=review > Source/WebKit/ChangeLog:9 > + After the changes to the sandbox and how defaults are being transferred to the web process, This should probably reference a commit. > Source/WebKit/ChangeLog:11 > + after setting the defaults so that the value is retried after it is actually set and we do "value is retried" -> "cache is invalidated" You might even mention which cache (colorCache in RenderTheme)... > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:953 > + [notificationCenter postNotificationName:@"NSSystemColorsWillChangeNotification" object:nil]; > + [notificationCenter postNotificationName:NSSystemColorsDidChangeNotification object:nil]; While it looks weird that "WillChange" and "DidChange" are adjacent without the change sitting between them, this does match what happens in AppKit.
Megan Gardner
Comment 3 2020-07-29 15:04:37 PDT
Tim Horton
Comment 4 2020-07-29 15:09:31 PDT
Comment on attachment 405508 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=405508&action=review > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:933 > +static const WTF::String& userHighlightColorPreferenceKey() Space above here. > Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:938 > + Not here.
Megan Gardner
Comment 5 2020-07-29 15:30:53 PDT
EWS
Comment 6 2020-07-29 18:00:27 PDT
Committed r265072: <https://trac.webkit.org/changeset/265072> All reviewed patches have been landed. Closing bug and clearing flags on attachment 405514 [details].
Radar WebKit Bug Importer
Comment 7 2020-07-29 18:01:17 PDT
Megan Gardner
Comment 8 2020-07-29 18:07:18 PDT
Note You need to log in before you can comment on or make changes to this bug.